Refactor ServerInstaller: PluginProps, atomic writes, Error Prone JVM flags
- Extract PluginProps to read groupId/version from embedded pom.properties,
  replacing PluginDescriptor injection (null under Takari smart builder)
- Add direct-invocation guard in SyncMojo with a clear warning message
- Extract FileUtil.writeAtomically (shared by ServerInstaller and WorkspaceManifestWriter)
- Switch ServerInstaller to content-based idempotency (render → compare → skip or write)
- Add --add-modules java.net.http: fixes Error Prone WellKnownMutability ClassNotFoundException
- Add ALL-UNNAMED exports/opens for javac internals: fixes IllegalAccessError when
  Error Prone replays as a classpath -Xplugin on didSave full passes
- Extract appendJavacAccess helper; use JavaScopes.RUNTIME over hardcoded string
- Sandbox IT user.home to target/it-home; add launcherContentValid IT assertion

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>