@@ -1,5 +1,6 @@
 package io.github.aglibs.lathe.maven;
 
+import io.github.aglibs.lathe.core.FileUtil;
 import io.github.aglibs.lathe.core.LatheLayout;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
@@ -7,6 +8,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.maven.plugin.logging.Log;
 import org.eclipse.aether.RepositorySystem;
 import org.eclipse.aether.RepositorySystemSession;
@@ -17,45 +19,32 @@ import org.eclipse.aether.repository.RemoteRepository;
 import org.eclipse.aether.resolution.ArtifactResult;
 import org.eclipse.aether.resolution.DependencyRequest;
 import org.eclipse.aether.resolution.DependencyResolutionException;
+import org.eclipse.aether.util.artifact.JavaScopes;
 
 final class ServerInstaller {
 
-  private static final String GROUP_ID = "io.github.ag-libs";
   private static final String ARTIFACT_ID = "lathe-server";
-  private static final String SCOPE_RUNTIME = "runtime";
-  private static final String ADD_EXPORTS =
-      "  --add-exports jdk.compiler/com.sun.tools.javac.%s=com.google.googlejavaformat \\\n";
-  private static final String ADD_OPENS =
-      "  --add-opens jdk.compiler/com.sun.tools.javac.%s=com.google.googlejavaformat \\\n";
 
   private final RepositorySystem repositorySystem;
   private final RepositorySystemSession repoSession;
   private final List<RemoteRepository> remoteRepositories;
   private final Log log;
-  private final String version;
 
   ServerInstaller(
       final RepositorySystem repositorySystem,
       final RepositorySystemSession repoSession,
       final List<RemoteRepository> remoteRepositories,
-      final Log log,
-      final String version) {
+      final Log log) {
     this.repositorySystem = repositorySystem;
     this.repoSession = repoSession;
     this.remoteRepositories = remoteRepositories;
     this.log = log;
-    this.version = version;
   }
 
   void install() throws SyncException {
+    final var version = PluginProps.version();
     final var versionDir = LatheLayout.serverVersionDir(version);
     final var launcherScript = versionDir.resolve(LatheLayout.LAUNCHER_SCRIPT);
-
-    if (Files.exists(launcherScript)) {
-      log.debug("[server] launcher already installed at " + launcherScript);
-      updateCurrentLink(versionDir);
-      return;
-    }
 
     final var jars = resolveServerJars();
     final var modulePath = jars.stream().map(Path::toString).collect(Collectors.joining(":"));
@@ -63,19 +52,28 @@ final class ServerInstaller {
 
     try {
       Files.createDirectories(versionDir);
-      Files.writeString(launcherScript, script, StandardCharsets.UTF_8);
-      launcherScript.toFile().setExecutable(true, false);
+      if (Files.exists(launcherScript)
+          && script.equals(Files.readString(launcherScript, StandardCharsets.UTF_8))) {
+        log.debug("[server] launcher unchanged — skipping write");
+        updateCurrentLink(versionDir);
+        return;
+      }
+      final boolean isUpdate = Files.exists(launcherScript);
+      FileUtil.writeAtomically(versionDir, launcherScript, script, true);
+      log.info(
+          "[server] %s launcher at %s"
+              .formatted(isUpdate ? "updated" : "installed", launcherScript));
     } catch (final IOException e) {
       throw new SyncException("lathe:sync failed to write launcher script", e);
     }
 
-    log.info("[server] installed launcher at " + launcherScript);
     updateCurrentLink(versionDir);
   }
 
   private List<Path> resolveServerJars() throws SyncException {
-    final var artifact = new DefaultArtifact(GROUP_ID, ARTIFACT_ID, "jar", version);
-    final var dep = new Dependency(artifact, SCOPE_RUNTIME);
+    final var artifact =
+        new DefaultArtifact(PluginProps.groupId(), ARTIFACT_ID, "jar", PluginProps.version());
+    final var dep = new Dependency(artifact, JavaScopes.RUNTIME);
     final var collectRequest = new CollectRequest(dep, remoteRepositories);
     final var depRequest = new DependencyRequest(collectRequest, null);
     try {
@@ -88,7 +86,9 @@ final class ServerInstaller {
           .toList();
     } catch (final DependencyResolutionException e) {
       throw new SyncException(
-          "lathe:sync failed to resolve server artifacts for version " + version, e);
+          "lathe:sync failed to resolve server artifacts for version %s"
+              .formatted(PluginProps.version()),
+          e);
     }
   }
 
@@ -101,21 +101,61 @@ final class ServerInstaller {
     } catch (final IOException e) {
       throw new SyncException("lathe:sync failed to update current server symlink", e);
     }
-    log.debug("[server] current → " + versionDir);
+
+    log.debug("[server] current → %s".formatted(versionDir));
   }
 
-  private static String renderLauncherScript(final String modulePath) {
+  static String renderLauncherScript(final String modulePath) {
     final var sb = new StringBuilder("#!/bin/sh\nexec java \\\n");
-    for (final var pkg :
-        new String[] {"api", "code", "comp", "file", "main", "model", "parser", "tree", "util"}) {
-      sb.append(ADD_EXPORTS.formatted(pkg));
-    }
-    for (final var pkg : new String[] {"code", "comp"}) {
-      sb.append(ADD_OPENS.formatted(pkg));
-    }
+    // java.net.http is not in the default module graph for the unnamed module; Error Prone's
+    // WellKnownMutability references HttpClient and throws ClassNotFoundException without this.
+    sb.append("  --add-modules java.net.http \\\n");
+    // Classpath javac plugins (e.g. Error Prone, loaded via -Xplugin: on the processor path) run
+    // in the unnamed module. They access javac internals directly and need ALL-UNNAMED exports.
+    // Without these, didSave full passes that replay -Xplugin:ErrorProne throw IllegalAccessError.
+    appendJavacAccess(
+        sb,
+        "--add-exports",
+        "ALL-UNNAMED",
+        "api",
+        "code",
+        "comp",
+        "file",
+        "main",
+        "model",
+        "parser",
+        "processing",
+        "tree",
+        "util");
+    appendJavacAccess(sb, "--add-opens", "ALL-UNNAMED", "code", "comp");
+    // google-java-format is a named module on the module path and uses module-qualified exports.
+    appendJavacAccess(
+        sb,
+        "--add-exports",
+        "com.google.googlejavaformat",
+        "api",
+        "code",
+        "comp",
+        "file",
+        "main",
+        "model",
+        "parser",
+        "tree",
+        "util");
+    appendJavacAccess(sb, "--add-opens", "com.google.googlejavaformat", "code", "comp");
     sb.append("  --module-path ").append(modulePath).append(" \\\n");
     sb.append(
         "  -m io.github.aglibs.lathe.server/io.github.aglibs.lathe.server.LatheServer \"$@\"\n");
     return sb.toString();
+  }
+
+  private static void appendJavacAccess(
+      final StringBuilder sb, final String flag, final String target, final String... pkgs) {
+    Stream.of(pkgs)
+        .forEach(
+            pkg ->
+                sb.append(
+                    "  %s jdk.compiler/com.sun.tools.javac.%s=%s \\\n"
+                        .formatted(flag, pkg, target)));
   }
 }
